chore: shift dependancies - Also fix some strange styling bugs

--- a/demo/src/App.css
+++ b/demo/src/App.css
@@ -46,7 +46,3 @@ body {
     transform: rotate(360deg);
   }
 }
-
-button {
-  font-size: calc(10px + 2vmin);
-}
